// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IconText both icons renders 1`] = `
<body>
  <div>
    <span
      class="flex flex--center-cross"
    >
      <span
        class="mr6"
      >
        <svg
          aria-hidden="true"
          class="events-none icon"
          data-testid="icon-check"
          focusable="false"
          style="width: 18px; height: 18px;"
        >
          <use
            xlink:href="#icon-check"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          />
        </svg>
        <span
          style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; word-wrap: normal;"
        >
          check
        </span>
      </span>
      What
      <span
        class="ml6"
      >
        <svg
          aria-hidden="true"
          class="events-none icon"
          data-testid="icon-github"
          focusable="false"
          style="width: 18px; height: 18px;"
        >
          <use
            xlink:href="#icon-github"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          />
        </svg>
        <span
          style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; word-wrap: normal;"
        >
          github
        </span>
      </span>
    </span>
  </div>
</body>
`;

exports[`IconText icon after renders 1`] = `
<body>
  <div>
    <span
      class="flex flex--center-cross"
    >
      Next
      <span
        class="ml6"
      >
        <svg
          aria-hidden="true"
          class="events-none icon"
          data-testid="icon-chevron-right"
          focusable="false"
          style="width: 18px; height: 18px;"
        >
          <use
            xlink:href="#icon-chevron-right"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          />
        </svg>
        <span
          style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; word-wrap: normal;"
        >
          chevron-right
        </span>
      </span>
    </span>
  </div>
</body>
`;

exports[`IconText icon before renders 1`] = `
<body>
  <div>
    <span
      class="flex flex--center-cross"
    >
      <span
        class="mr6"
      >
        <svg
          aria-hidden="true"
          class="events-none icon"
          data-testid="icon-clipboard"
          focusable="false"
          style="width: 18px; height: 18px;"
        >
          <use
            xlink:href="#icon-clipboard"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          />
        </svg>
        <span
          style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; word-wrap: normal;"
        >
          clipboard
        </span>
      </span>
      Copy
    </span>
  </div>
</body>
`;

exports[`IconText inline flex parent renders 1`] = `
<body>
  <div>
    <span
      class="inline-flex flex--center-cross"
    >
      <span
        class="mr6"
      >
        <svg
          aria-hidden="true"
          class="events-none icon"
          data-testid="icon-polyline"
          focusable="false"
          style="width: 18px; height: 18px;"
        >
          <use
            xlink:href="#icon-polyline"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          />
        </svg>
        <span
          style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; word-wrap: normal;"
        >
          polyline
        </span>
      </span>
      <span>
        Inline
      </span>
    </span>
  </div>
</body>
`;
